[gd_scene load_steps=5 format=3 uid="uid://dfnysapuemvfn"]

[ext_resource type="Script" path="res://scenes/ui/game/game_over.gd" id="1_1aihg"]

[sub_resource type="Animation" id="Animation_tgnum"]
resource_name = "Enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Up:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(3.4822, 3.03143),
"update": 0,
"values": [Vector2(0, -324), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Down:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(3.13834, 2.2974),
"update": 0,
"values": [Vector2(0, 648), Vector2(0, 324)]
}

[sub_resource type="Animation" id="Animation_utcoo"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Up:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -324)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Down:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 648)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wnj0c"]
_data = {
"Enter": SubResource("Animation_tgnum"),
"RESET": SubResource("Animation_utcoo")
}

[node name="GameOver" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_1aihg")

[node name="Up" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1152, 324)
offset_top = -324.0
offset_right = 1152.0
color = Color(1, 1, 1, 0)

[node name="YouDied" type="Label" parent="Up"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -172.5
offset_top = -113.0
offset_right = 172.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 80
text = "You Died"

[node name="Down" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 324)
offset_top = 648.0
offset_right = 1152.0
offset_bottom = 972.0
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="VBox" type="VBoxContainer" parent="Down"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Buttons" type="HBoxContainer" parent="Down/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="ReviveButton" type="Button" parent="Down/VBox/Buttons"]
custom_minimum_size = Vector2(240, 60)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 30
text = "Revive"

[node name="QuitButton" type="Button" parent="Down/VBox/Buttons"]
custom_minimum_size = Vector2(240, 60)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="ReviveCount" type="Label" parent="Down/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Revive Count: 0"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wnj0c")
}

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="Down/VBox/Buttons/ReviveButton" to="." method="_on_revive_button_button_down"]
[connection signal="mouse_entered" from="Down/VBox/Buttons/ReviveButton" to="." method="_play_button_hover_sound"]
[connection signal="button_down" from="Down/VBox/Buttons/QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="mouse_entered" from="Down/VBox/Buttons/QuitButton" to="." method="_play_button_hover_sound"]
